src/objects/Application__c.object
<CustomObject>
    <description>An application for a position offered at Box.</description>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <description>The average rating for the reviews</description>
        <formula>Total_Rating__c / Number_of_Reviews__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The average rating for the reviews</inlineHelpText>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Box_Resume_Id__c</fullName>
        <description>Resume id of a resume stored in Box. Used to retreive a resume and display embedded in a page.</description>
        <label>Box_Resume_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Resume_Link__c</fullName>
        <description>The URL for the resume in the box folder</description>
        <label>Box Resume Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Candidate_Email_Address__c</fullName>
        <label>Candidate Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Candidate_Formula__c</fullName>
        <formula>Candidate__r.First_Name__c
&amp;
&quot; &quot;
&amp;
Candidate__r.Last_Name__c</formula>
        <label>Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <formula>Candidate__r.First_Name__c  + &apos; &apos; + Candidate__r.Last_Name__c</formula>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Candidate who is applying.</description>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <description>The text contents of the cover letter</description>
        <label>Cover Letter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>This field to add notes about the applications which are referred by employees/Agents</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Reviews__c</fullName>
        <label>Number of Reviews</label>
        <summaryForeignKey>Review__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Position_Name__c</fullName>
        <formula>Position__r.Name</formula>
        <label>Position Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resume_Text__c</fullName>
        <description>Textual version of a resume.</description>
        <label>Resume Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Hires by Source</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Job Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiter Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiter Screen Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiter Screen Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM Screen Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM Screen Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer in process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <description>Shows the sum of all the job application&apos;s review ratings</description>
        <inlineHelpText>Shows the sum of all the job application&apos;s review ratings</inlineHelpText>
        <label>Total Rating</label>
        <summarizedField>Review__c.Culture_Rating__c</summarizedField>
        <summaryForeignKey>Review__c.Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>Active_Applications</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>New,Submitted Rejection,Recruiter Screen Rejection,HM Screen Rejection</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Accepted,Rejected</value>
        </filters>
        <label>Active Applications</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Candidate__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Closed_Applications</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted Rejection,Recruiter Screen Rejection,HM Screen Rejection,Rejected</value>
        </filters>
        <label>Closed Applications</label>
    </listViews>
    <listViews>
        <fullName>Flagged_Candidates</fullName>
        <columns>Candidate_Formula__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Flagged Candidates</label>
    </listViews>
    <listViews>
        <fullName>Hired_Candidates</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Position__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>Hired Candidates</label>
    </listViews>
    <listViews>
        <fullName>New_Applications</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Recruiter__c</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Coordinator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Applications</label>
    </listViews>
    <listViews>
        <fullName>New_Onsite</fullName>
        <columns>NAME</columns>
        <columns>Candidate__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Onsite Interview</value>
        </filters>
        <label>New Onsite</label>
    </listViews>
    <listViews>
        <fullName>New_Phone_Screen</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Candidate__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Recruiter Screen</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>HM Screen</value>
        </filters>
        <label>New Phone Screen</label>
    </listViews>
    <listViews>
        <fullName>New_Recruiter_Screen</fullName>
        <columns>NAME</columns>
        <columns>Candidate__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Recruiter Screen</value>
        </filters>
        <label>New Recruiter Screen</label>
    </listViews>
    <listViews>
        <fullName>Offer_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Position__c</columns>
        <columns>Source__c</columns>
        <columns>Total_Rating__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Offer in process</value>
        </filters>
        <label>Offer In Progress</label>
    </listViews>
    <listViews>
        <fullName>Pending_Candidates</fullName>
        <columns>Candidate__c</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Recruiter Screen,HM Screen,Onsite Interview,Offer in process</value>
        </filters>
        <label>Pending Candidates</label>
    </listViews>
    <listViews>
        <fullName>Pending_HM_Screens</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>Recruiter__c</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Coordinator__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Recruiter Screen Approved</value>
        </filters>
        <label>Pending HM Screens</label>
    </listViews>
    <listViews>
        <fullName>Pending_Onsites</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>Recruiter__c</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Coordinator__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>HM Screen Approved</value>
        </filters>
        <label>Pending Onsites</label>
    </listViews>
    <listViews>
        <fullName>Pending_Recruiter_Screens</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Formula__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>Recruiter__c</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Coordinator__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted Approved</value>
        </filters>
        <label>Pending Recruiter Screens</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>ApplicationID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Authenticated_Site_Sharing_Access__c</fullName>
        <label>Authenticated Site Sharing Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Department_Sharing_Access__c</fullName>
        <label>Department Sharing Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Dept_Head_Hiring_Manager_Sharing_Access__c</fullName>
        <label>Dept Head Hiring Manager Sharing Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>Check_Taggings</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Hiring_Manager__c ) || ISBLANK( Recruiter__c ) ||  ISBLANK( Coordinator__c )</errorConditionFormula>
        <errorMessage>Tagged Hiring Manager, Recruiter and Coordinator cannot be blank.</errorMessage>
    </validationRules>
</CustomObject>